--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8f92ff">  <td>18/09/03 14:21:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MainCaller.f()[pri:0, instance:com.driver.main.MainCaller@5b87ed94]">f</td> 
-  <td>main@674483268</td>   <td></td> </tr>
+<tr bgcolor="d992b2">  <td>18/09/06 22:31:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;MainCaller.a()[pri:0, instance:com.driver.main.MainCaller@4973813a]">&gt;&gt;a</td> 
+<td>&nbsp;</td>  <td>main@22429093</td>   <td></td> </tr>
+<tr bgcolor="d992b2">  <td>18/09/06 22:31:22</td>   <td>656</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MainCaller.f()[pri:0, instance:com.driver.main.MainCaller@4973813a]">f</td> 
+  <td>main@22429093</td>   <td></td> </tr>
+<tr bgcolor="d992b2">  <td>18/09/06 22:31:36</td>   <td>15207</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;MainCaller.g(org.testng.ITestResult)[pri:0, instance:com.driver.main.MainCaller@4973813a]">&lt;&lt;g</td> 
+<td>&nbsp;</td>  <td>main@22429093</td>   <td></td> </tr>
+<tr bgcolor="d992b2">  <td>18/09/06 22:31:37</td>   <td>15364</td> <td title="&lt;&lt;MainCaller.z()[pri:0, instance:com.driver.main.MainCaller@4973813a]">&lt;&lt;z</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@22429093</td>   <td></td> </tr>
 </table>
